--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -1,77 +1,11 @@
 <%- include('partials/header') %>
 
 
-  <header id="gtco-header" class="gtco-cover gtco-cover-md" role="banner"
-    style="background-image: url(https://images.unsplash.com/photo-1606913079621-e64bd28682ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80)"
+  <header id="gtco-header" class="gtco-cover gtco-cover-md" role="banner" style="background-image: url(images/bg2.jpg)"
     data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
-    <div class="gtco-container">
-      <div class="row">
-        <div class="col-md-12 col-md-offset-0 text-left">
-          <div class="row row-mt-15em">
-            <div class="col-md-7 mt-text animate-box" data-animate-effect="fadeInUp">
-              <h1 class="cursive-font">All in good taste!</h1>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
+    <h1 class="cursive-font header-1">All in good taste!</h1>
   </header>
-
-
-  <!-- <div class="gtco-section">
-    <div class="gtco-container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="col-md-6 animate-box">
-            <h3>Get In Touch</h3>
-            <form action="#">
-              <div class="row form-group">
-                <div class="col-md-12">
-                  <label class="sr-only" for="name">Name</label>
-                  <input type="text" id="name" class="form-control" placeholder="Your firstname">
-                </div>
-              </div>
-
-              <div class="row form-group">
-                <div class="col-md-12">
-                  <label class="sr-only" for="email">Email</label>
-                  <input type="text" id="email" class="form-control" placeholder="Your email address">
-                </div>
-              </div>
-              <div class="row form-group">
-                <div class="col-md-12">
-                  <label class="sr-only" for="message">Message</label>
-                  <textarea name="message" id="message" cols="30" rows="10" class="form-control"
-                    placeholder="Write us something"></textarea>
-                </div>
-              </div>
-              <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-primary">
-              </div>
-
-            </form>
-          </div>
-          <div class="col-md-5 col-md-push-1 animate-box">
-
-            <div class="gtco-contact-info">
-              <h3>Contact Information</h3>
-              <ul>
-                <li class="address">198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-                <li class="phone"><a href="tel://1234567920">+ 1235 2355 98</a></li>
-                <li class="email"><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-                <li class="url"><a href="http://FreeHTML5.co">FreeHTML5.co</a></li>
-              </ul>
-            </div>
-
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
 
   <div class="gtco-section">
     <div class="gtco-container">
@@ -111,12 +45,31 @@
     data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="gtco-container text-center">
-      <div class="display-t">
-        <div class="display-tc">
-          <h1>&ldquo; Their high quality of service makes me back over and over again!&rdquo;</h1>
-          <p>&mdash; John Doe, CEO of XYZ Co.</p>
+  
+      <div class="owl-carousel2">
+        <div class="item" data-merge="6">
+          <div class="display-t">
+            <div class="display-tc">
+              <h1>&ldquo; Amazing experience! If you thought gourmet kitchen will leave you hungry, think again. You
+                should skip several meals before visiting this amazing place. Everything is so tasty, you cannot stop
+                yourself from having all of the dishes!&rdquo;</h1>
+              <p>&mdash; Faith, Chef's Wife.</p>
+            </div>
+          </div>
         </div>
+        <div class="item" data-merge="6">
+          <div class="display-t">
+            <div class="display-tc">
+              <h1>&ldquo; Yum yum yum &rdquo;</h1>
+              <p>&mdash; Toby, Chef's Son.</p>
+            </div>
+          </div>
+        </div>
+  
+  
       </div>
+  
+  
     </div>
   </div>
 
