--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,8 @@
 
 
   <header id="gtco-header" class="gtco-cover gtco-cover-md" role="banner"
-    style="background-image: url(https://images.unsplash.com/photo-1606913079621-e64bd28682ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80)" data-stellar-background-ratio="0.5">
+    style="background-image: url(https://images.unsplash.com/photo-1606913079621-e64bd28682ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80)"
+    data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="gtco-container">
       <div class="row">
@@ -22,7 +23,7 @@
                         <div class="row form-group">
                           <div class="col-md-12">
                             <label for="activities">Persons</label>
-                            <select name="activities" id="activities" class="form-control">
+                            <select name="activities" id="activities" class="form-control" required>
                               <option value="0">Persons</option>
                               <option value="1">1</option>
                               <option value="2">2</option>
@@ -35,13 +36,19 @@
                         <div class="row form-group">
                           <div class="col-md-12">
                             <label for="date-start">Date</label>
-                            <input type="text" id="date" name="date" class="form-control">
+                            <input type="text" id="date" name="date" class="form-control" required>
                           </div>
                         </div>
                         <div class="row form-group">
                           <div class="col-md-12">
                             <label for="date-start">Time</label>
-                            <input type="text" id="time" name="time" class="form-control">
+                            <input type="text" id="time" name="time" class="form-control" required>
+                          </div>
+                        </div>
+                        <div class="row form-group">
+                          <div class="col-md-12">
+                            <label for="email">Email Address</label>
+                            <input type="email" id="email" name="email" class="form-control" required>
                           </div>
                         </div>
 
@@ -71,7 +78,9 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center gtco-heading">
           <h2 class="cursive-font primary-color">Our Menu</h2>
-          <p>On our menu, expect a modern take on an extensive range of delicious meals. Our servers can recommend the most appropriate variety of beer/wine to each individual guest, based upon their chosen dish or desired tastes.</p>
+          <p>On our menu, expect a modern take on an extensive range of delicious meals. We always recommend the most
+            appropriate variety of beer/wine to each individual guest, based upon their chosen dish or desired tastes.
+          </p>
         </div>
       </div>
       <div class="row">
@@ -83,7 +92,8 @@
             </figure>
             <div class="fh5co-text">
               <h2>Baked Plantains (<em>Nigerian Boli</em>)</h2>
-              <p>Oven-roasted perfectly baked ripe plantains served with. A simple yet delicious west african delicacy.</p>
+              <p>Oven-roasted perfectly baked ripe plantains served with. A simple yet delicious west african delicacy.
+              </p>
               <p><span class="price cursive-font">AED 0.00</span></p>
             </div>
           </a>
@@ -96,7 +106,8 @@
             </figure>
             <div class="fh5co-text">
               <h2>Fried Plantains (<em>Nigerian Dodo</em>)</h2>
-              <p>Fried to perfections. Very sweet and soft on the inside. A simple delicious west african, jamaican and cuban delicacy.</p>
+              <p>Fried to perfections. Very sweet and soft on the inside. A simple delicious west african, jamaican and
+                cuban delicacy.</p>
               <p><span class="price cursive-font">AED 0.00</span></p>
             </div>
           </a>
@@ -109,7 +120,8 @@
             </figure>
             <div class="fh5co-text">
               <h2>Buffalo Chicken Drumsticks</h2>
-              <p>Delicious buffalo drumsticks, juicy baked drumsticks coated in a tasty sauce made from melted butter and hot pepper sauce.</p>
+              <p>Delicious buffalo drumsticks, juicy baked drumsticks coated in a tasty sauce made from melted butter
+                and hot pepper sauce.</p>
               <p><span class="price cursive-font">AED 0.00</span></p>
             </div>
           </a>
@@ -162,17 +174,36 @@
     </div>
   </div>
 
- 
-  <div class="gtco-cover gtco-cover-sm" style="background-image: url(images/img_bg_1.jpg)"
+
+  <div class="gtco-cover gtco-cover-sm" style="background-image: url(images/bg1.jpg)"
     data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="gtco-container text-center">
-      <div class="display-t">
-        <div class="display-tc">
-          <h1>&ldquo; Their high quality of service makes me back over and over again!&rdquo;</h1>
-          <p>&mdash; John Doe, CEO of XYZ Co.</p>
+
+      <div class="owl-carousel2">
+        <div class="item" data-merge="6">
+          <div class="display-t">
+            <div class="display-tc">
+              <h1>&ldquo; Amazing experience! If you thought gourmet kitchen will leave you hungry, think again. You
+                should skip several meals before visiting this amazing place. Everything is so tasty, you cannot stop
+                yourself from having all of the dishes!&rdquo;</h1>
+              <p>&mdash; Faith, Chef's Wife.</p>
+            </div>
+          </div>
         </div>
+        <div class="item" data-merge="6">
+          <div class="display-t">
+            <div class="display-tc">
+              <h1>&ldquo; Yum yum yum &rdquo;</h1>
+              <p>&mdash; Toby, Chef's Son.</p>
+            </div>
+          </div>
+        </div>
+
+
       </div>
+
+
     </div>
   </div>
 
