--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,6 @@
                           <div class="col-md-12">
                             <label for="activities">Persons</label>
                             <select name="activities" id="activities" class="form-control" required>
-                              <option value="0">Persons</option>
                               <option value="1">1</option>
                               <option value="2">2</option>
                               <option value="3">3</option>
@@ -43,6 +42,12 @@
                           <div class="col-md-12">
                             <label for="date-start">Time</label>
                             <input type="text" id="time" name="time" class="form-control" required>
+                          </div>
+                        </div>
+                        <div class="row form-group">
+                          <div class="col-md-12">
+                            <label for="name">Full Name</label>
+                            <input type="text" id="name" name="name" class="form-control" required>
                           </div>
                         </div>
                         <div class="row form-group">
