--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -35,9 +35,10 @@
       </div>
     </div>
 
-    <div class="reserve-form">
+    <form action="/reservation" method="post" class="reserve-form">
+      <input type="hidden" id="hiidenData" name="data" value="">
       <button class="btn btn-success submit" type="submit">Submit Reservation</button>
-    </div>
+    </form>
   </div>
 
 
