--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -6,7 +6,7 @@
     <div class="overlay"></div>
   </header>
 
-  <div class="gtco-section">
+  <div class="gtco-section confirmation-container">
     <div class="gtco-container">
       <div class="main-wrapper">
         <h1 class="reservation-header">
