--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,6 @@
           <div class="col-md-4 col-md-push-1 animate-box" data-animate-effect="fadeInRight" id="reservation">
             <div class="form-wrap">
               <div class="tab">
-
                 <div class="tab-content">
                   <div class="tab-content-inner active" data-content="signup">
                     <h3 class="cursive-font">Table Reservation</h3>
@@ -31,7 +30,7 @@
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
-                            <option value="5plus">5+</option>
+                            <option value="5+">5+</option>
                           </select>
                         </div>
                       </div>
