--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,18 +9,19 @@
                 <div class="gtco-widget">
                     <h3>Get In Touch</h3>
                     <ul class="gtco-quick-contact">
-                        <li><a href="#"><i class="icon-phone"></i> +971 52 703 7359</a></li>
-                        <li><a href="#"><i class="icon-mail2"></i> info@rayskitchen.com</a></li>
-                        <li><a href="#"><i class="icon-chat"></i> Live Chat</a></li>
+                        <li><a href="#!"><i class="icon-phone"></i> +971 52 703 7359</a></li>
+                        <li><a href="mailto:info@rayskitchen.com"><i class="icon-mail2"></i> info@rayskitchen.com</a>
+                        </li>
+                        <li><a href="#!" class="chat-coming-soon"><i class="icon-chat"></i> Live Chat</a></li>
                     </ul>
                 </div>
                 <div class="gtco-widget">
                     <h3>Get Social</h3>
                     <ul class="gtco-social-icons">
-                        <li><a href="#"><i class="icon-twitter"></i></a></li>
-                        <li><a href="#"><i class="icon-facebook"></i></a></li>
-                        <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                        <li><a href="#"><i class="icon-dribbble"></i></a></li>
+                        <li><a href="https://twitter.com/"><i class="icon-twitter"></i></a></li>
+                        <li><a href="https://facebook.com/"><i class="icon-facebook"></i></a></li>
+                        <li><a href="https://www.linkedin.com/"><i class="icon-linkedin"></i></a></li>
+                        <li><a href="https://dribbble.com/"><i class="icon-dribbble"></i></a></li>
                     </ul>
                 </div>
             </div>
