--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -51,7 +51,8 @@
         <div class="col-xs-8 text-right menu-1">
           <ul id="btn-cta">
             <li><a href="/#menu">Menu</a></li>
-            <li class="btn-cta"><a href="/#reservation"><span>Reservation</span></a></li>
+            <li><a href="/myreservations"><span>My Reservation</span></a></li>
+            <li class="btn-cta"><a href="/#reservation"><span>New Reservation</span></a></li>
           </ul>
         </div>
       </div>
