--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,7 +9,7 @@
                 <div class="gtco-widget">
                     <h3>Get In Touch</h3>
                     <ul class="gtco-quick-contact">
-                        <li><a href="#!"><i class="icon-phone"></i> +971 52 703 7359</a></li>
+                        <li><a href="tel:+971527037359"><i class="icon-phone"></i> +971 52 703 7359</a></li>
                         <li><a href="mailto:info@rayskitchen.com"><i class="icon-mail2"></i> info@rayskitchen.com</a>
                         </li>
                         <li><a href="#!" class="chat-coming-soon"><i class="icon-chat"></i> Live Chat</a></li>
