--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,7 @@ figure {
   color: #000;
   font-family: "Lato", Arial, sans-serif;
   font-weight: 400;
-  margin: 0 0 20px 0;
+  margin: 0 0 20px;
 }
 
 ::-webkit-selection {
@@ -149,7 +149,7 @@ figure {
 
 .gtco-nav ul {
   padding: 0;
-  margin: 2px 0 0 0;
+  margin: 2px 0 0;
 }
 
 .gtco-nav ul li {
@@ -180,9 +180,9 @@ figure {
 
 .gtco-nav ul li.has-dropdown .dropdown {
   width: 190px;
-  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.15);
   z-index: 1002;
   visibility: hidden;
   opacity: 0;
@@ -328,7 +328,7 @@ figure {
 }
 
 #gtco-header h1 {
-  margin-bottom: 0px;
+  margin-bottom: 0;
   font-size: 80px;
   line-height: 1.5;
   font-weight: 300;
@@ -354,9 +354,9 @@ figure {
   border-top: 10px solid #FBB448;
   position: relative;
   width: 100%;
-  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
 }
 
 #gtco-header .form-wrap h3 {
@@ -365,7 +365,7 @@ figure {
 
 #gtco-header .form-wrap .tab-menu {
   padding: 0 !important;
-  margin: 0 0 -10px 0 !important;
+  margin: 0 0 -10px !important;
   width: 100%;
   float: left;
   z-index: 12;
@@ -383,7 +383,7 @@ figure {
 }
 
 #gtco-header .form-wrap .tab-menu li a {
-  padding: 10px 20px 20px 20px;
+  padding: 10px 20px 20px;
   float: left;
   width: 100%;
   display: block;
@@ -397,7 +397,7 @@ figure {
 
 #gtco-header .form-wrap .tab-menu li.active a {
   display: block;
-  padding: 10px 20px 20px 20px;
+  padding: 10px 20px 20px;
   background: #fff;
   color: #FBB448;
 }
@@ -481,9 +481,9 @@ figure {
   display: table;
   text-align: center;
   background: #fff;
-  -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0 14px 30px -15px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0 14px 30px -15px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 14px 30px -15px rgba(0, 0, 0, 0.75);
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -715,7 +715,7 @@ figure {
 
 .gtco-contact-info ul li {
   padding: 0 0 0 50px;
-  margin: 0 0 30px 0;
+  margin: 0 0 30px;
   list-style: none;
   position: relative;
 }
@@ -972,7 +972,7 @@ form label {
   height: 90px;
   display: table;
   text-align: center;
-  margin: 0 auto 40px auto;
+  margin: 0 auto 40px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -1171,14 +1171,14 @@ form label {
 
 #gtco-footer .gtco-footer-links {
   padding: 0;
-  margin: 0 0 20px 0;
+  margin: 0 0 20px;
   float: left;
   width: 100%;
 }
 
 #gtco-footer .gtco-footer-links li {
   padding: 0;
-  margin: 0 0 15px 0;
+  margin: 0 0 15px;
   list-style: none;
   line-height: 1;
 }
@@ -1211,7 +1211,7 @@ form label {
 
 #gtco-footer .gtco-widget .gtco-quick-contact li {
   padding: 0;
-  margin: 0 20px 10px 0px;
+  margin: 0 20px 10px 0;
   list-style: none;
   display: -moz-inline-stack;
   display: inline-block;
@@ -1264,7 +1264,7 @@ form label {
   right: 0;
   top: 0;
   bottom: 0;
-  padding: 45px 40px 40px 40px;
+  padding: 45px 40px 40px;
   overflow-y: auto;
   display: none;
   -moz-transform: translateX(270px);
@@ -1284,11 +1284,11 @@ form label {
 }
 
 .offcanvas #gtco-offcanvas {
-  -moz-transform: translateX(0px);
-  -webkit-transform: translateX(0px);
-  -ms-transform: translateX(0px);
-  -o-transform: translateX(0px);
-  transform: translateX(0px);
+  -moz-transform: translateX(0);
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
+  transform: translateX(0);
 }
 
 #gtco-offcanvas a {
@@ -1322,7 +1322,7 @@ form label {
 
 #gtco-offcanvas ul li.offcanvas-has-dropdown>a:after {
   position: absolute;
-  right: 0px;
+  right: 0;
   font-family: 'icomoon';
   speak: none;
   font-style: normal;
@@ -1493,10 +1493,10 @@ form label {
 
 .gtco-nav-toggle {
   position: absolute;
-  right: 0px;
+  right: 0;
   top: 10px;
   z-index: 21;
-  padding: 6px 0 0 0;
+  padding: 6px 0 0;
   display: block;
   margin: 0 auto;
   display: none;
@@ -1726,7 +1726,7 @@ form label {
   visibility: hidden;
   opacity: 0;
   position: absolute;
-  right: 0px;
+  right: 0;
   top: 50%;
   margin-top: -8px;
   -webkit-transition: 0.2s;
@@ -1793,8 +1793,8 @@ form label {
 
 .gtco-loader {
   position: fixed;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   z-index: 9999;
@@ -1813,7 +1813,7 @@ form label {
 
 .gtco-nav .gtco-contact ul {
   padding: 0;
-  margin: 0 0 20px 0;
+  margin: 0 0 20px;
 }
 
 .gtco-nav .gtco-contact ul li {
@@ -1824,7 +1824,7 @@ form label {
 .gtco-nav .gtco-contact ul li a {
   font-size: 14px;
   font-weight: bold !important;
-  margin-left: 0px;
+  margin-left: 0;
 }
 
 .gtco-nav .gtco-contact ul li a i {
@@ -1982,15 +1982,15 @@ form label {
   z-index: 9;
   bottom: 0;
   margin-bottom: 30px;
-  -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.18);
-  -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.18);
-  -ms-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.18);
-  -o-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.18);
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.18);
-  -webkit-border-radius: 0px;
-  -moz-border-radius: 0px;
-  -ms-border-radius: 0px;
-  border-radius: 0px;
+  -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.18);
+  -moz-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.18);
+  -ms-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.18);
+  -o-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.18);
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.18);
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  border-radius: 0;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
@@ -2041,7 +2041,7 @@ form label {
 }
 
 .fh5co-card-item .fh5co-text {
-  padding: 0px 10px 10px 20px;
+  padding: 0 10px 10px 20px;
   text-align: center;
   position: relative;
   z-index: 22;
@@ -2073,7 +2073,7 @@ form label {
 .fh5co-card-item .fh5co-text h2 {
   font-size: 20px;
   font-weight: 400;
-  margin: 0 0 10px 0;
+  margin: 0 0 10px;
   color: #FBB448;
 }
 
@@ -2106,11 +2106,11 @@ form label {
 .fh5co-card-item:focus {
   bottom: 7px;
   text-decoration: none;
-  -webkit-box-shadow: 0px 1px 20px 0px rgba(0, 0, 0, 0.19);
-  -moz-box-shadow: 0px 1px 20px 0px rgba(0, 0, 0, 0.19);
-  -ms-box-shadow: 0px 1px 20px 0px rgba(0, 0, 0, 0.19);
-  -o-box-shadow: 0px 1px 20px 0px rgba(0, 0, 0, 0.19);
-  box-shadow: 0px 1px 20px 0px rgba(0, 0, 0, 0.19);
+  -webkit-box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.19);
+  -ms-box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.19);
+  -o-box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .fh5co-card-item:hover img,
@@ -2126,7 +2126,7 @@ form label {
 .fh5co-card-item:focus span.btn {
   opacity: 1;
   visibility: visible;
-  bottom: 0px;
+  bottom: 0;
   border: 2px solid #fcbe61 !important;
   background: #fcbe61 !important;
 }
@@ -2200,7 +2200,7 @@ form label {
 }
 
 .pricing-plan {
-  margin: 0 0 30px 0;
+  margin: 0 0 30px;
   padding: 0;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -2223,7 +2223,7 @@ form label {
 
 .pricing-info {
   padding: 0;
-  margin: 0 0 30px 0;
+  margin: 0 0 30px;
 }
 
 .pricing-info li {
@@ -2239,7 +2239,7 @@ form label {
 }
 
 .fh5co-faq-list li {
-  margin: 0 0 40px 0;
+  margin: 0 0 40px;
   padding: 0;
   line-height: 1.5;
   list-style: none;
@@ -2247,7 +2247,7 @@ form label {
 
 @media screen and (max-width: 768px) {
   .fh5co-faq-list li {
-    margin: 0 0 20px 0;
+    margin: 0 0 20px;
   }
 }
 
@@ -2300,13 +2300,13 @@ li.food-item {
 input.disabled {
   max-width: 34px;
   text-align: center;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 p.food-item-name {
-  padding: 0px !important;
-  margin: 0px;
+  padding: 0 !important;
+  margin: 0;
   flex: 0 0 50%;
 }
 
@@ -2416,5 +2416,3 @@ button.search:hover {
   align-items: center;
   text-align: center;
 }
-
-/*# sourceMappingURL=style.css.map */
